fixed project overflow

--- a/src/styles/Project.css
+++ b/src/styles/Project.css
@@ -15,7 +15,7 @@
 .projects {
   overflow-x: hidden; /* This prevents horizontal scrolling */
   width: 100%;
-  min-height: 81vh;
+  min-height: 90vh;
   display: flex;
   flex-direction: column;
   align-items: center;
